--- a/hssdk/build.gradle
+++ b/hssdk/build.gradle
@@ -26,11 +26,17 @@ android {
         }
     }
 
-    repositories {
-        flatDir {
-            dirs 'libs'
+    sourceSets {
+        main {
+            jniLibs.srcDirs = ['libs']
         }
     }
+
+//    repositories {
+//        flatDir {
+//            dirs 'libs'
+//        }
+//    }
 
 }
 
@@ -51,16 +57,15 @@ android {
 }
 
 dependencies {
-    compileOnly fileTree(include: ['*.jar'], dir: 'libs')
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:27.1.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     compileOnly 'io.reactivex.rxjava2:rxjava:2.1.2'
     compileOnly 'io.reactivex.rxjava2:rxandroid:2.0.1'
-        implementation project(path: ':hshttplibrary')
-    //    implementation(name: "hshttplibrary-release", ext: 'aar')
-    api files('libs/xylink-android-sdk-2.20.3.jar')
-    api files('libs/camera.jar')
+    implementation project(path: ':hshttplibrary')
+//    implementation(name: "hshttplibrary-debug", ext: 'aar')
+    implementation files('libs/xylink-android-sdk-2.20.3.jar')
 }
 
